--- a/Pages/HomePage/style.css
+++ b/Pages/HomePage/style.css
@@ -1,22 +1,33 @@
 :root {
     --white: #fff;
     --black: #000;
+
     --orange-main: #FF8A00;
     --orange-hover-bright: #ffbb6e;
     --orange-hover-dark: #834600;
+
     --blue-main: #0500FF;
     --blue-hover-bright: #5c59ff;
     --blue-hover-dark: #0300a0;
+
     --green-main: #05FF00;
     --green-hover-bright: #65ff62;
     --green-hover-dark: #03a500;
+    
     --gray-main: #D9D9D9;
     --gray-hover-dark: #8a8a8a;
 }
 
 body {
-    background-color: green;
+    background-color: var(--white);
 }
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 14px;
+}
+
 
 /* Media query para tablets */
 @media screen and (min-width: 768px) {
