--- a/Pages/HomePage/style.css
+++ b/Pages/HomePage/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
     --white: #fff;
     --black: #000;
@@ -13,19 +15,24 @@
     --green-main: #05FF00;
     --green-hover-bright: #65ff62;
     --green-hover-dark: #03a500;
-    
+
     --gray-main: #D9D9D9;
     --gray-hover-dark: #8a8a8a;
 }
 
 body {
+    font-family: 'Montserrat', sans-serif;
     background-color: var(--white);
+    height: 100vh;
+    width: 100vw;
 }
-header{
+
+header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px 14px;
+    overflow-y: hidden;
 }
 
 
